--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -15,6 +15,7 @@ ktorSerializationKotlinxJson = "2.3.3"
 lifecycleRuntimeKtx = "2.7.0"
 activityCompose = "1.8.2"
 composeBom = "2023.08.00"
+materialIconsExtendedAndroid = "1.6.6"
 okhttpUrlconnection = "4.9.3"
 roomRuntime = "2.6.1"
 lifecycleRuntimeCompose = "2.7.0"
@@ -47,6 +48,7 @@ ktor-client-core = { module = "io.ktor:ktor-client-core", version.ref = "ktorCli
 ktor-client-logging = { module = "io.ktor:ktor-client-logging", version.ref = "ktorClientLogging" }
 ktor-serialization-kotlinx-json = { module = "io.ktor:ktor-serialization-kotlinx-json", version.ref = "ktorSerializationKotlinxJson" }
 androidx-navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref = "navigationCompose" }
+material-icons-extended-android = { module = "libs.androidx.compose.material:material-icons-extended-android", version.ref = "materialIconsExtendedAndroid" }
 okhttp-urlconnection = { module = "com.squareup.okhttp3:okhttp-urlconnection", version.ref = "okhttpUrlconnection" }
 
 
